--- a/main.html
+++ b/main.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Increment Counter</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<p id='counter'>0</p>
-	<button id='incrementBtn'>Increment</button>
+
+  <h1>increment-counter</h1>
+
+  <p id="counter">0</p>
+  <button id="incrementBtn">Increment</button>
+
+  <script>
+    const counter = document.getElementById('counter');
+    const incrementBtn = document.getElementById('incrementBtn');
+
+    incrementBtn.addEventListener('click', () => {
+      const currentValue = parseInt(counter.innerText);
+      alert(currentValue); // Show the un-incremented value
+      counter.innerText = currentValue + 1; // Increment the value
+    });
+  </script>
 
 </body>
-
 </html>
